# rag-document-intelligence

./: README.md  pyproject.toml
data/eval/: Q&A.xlsx  questions.csv  questions_small.csv  questions_small__allminilml6v2__bartbase.csv  questions_small__allminilml6v2__flant5base.csv  questions_small__allminilml6v2__flant5large.csv  questions_small__allminilml6v2__flant5small.csv  questions_small__allminilml6v2__longt5tgloballarge.csv  questions_small__allminilml6v2__qwen2.51.5binstruct.csv  questions_small__allminilml6v2__qwen2.51.5binstruct_back.csv  questions_small__allminilml6v2__tinyllama1.1bchatv1.0.csv  questions_small__allminilml6v2__tinyllama1.1bchatv1.0_back.csv
data/processed/: chunks.jsonl  documents.jsonl
data/processed/vector_store/: index.faiss  metadata.json
rag/: config.py  logging_config.py  models.py
rag/embeddings/: embedder.py
rag/evaluation/: runner.py
rag/generation/: context_builder.py  llm.py  prompts.py
rag/ingestion/: chunker.py  loader.py  serializer.py
rag/retrieval/: store.py
scripts/: chunk.py  embed.py  evaluate.py  ingest.py  query.py  santiy_check.py  search.py
